# HWID-Utility

./: CMakeLists.txt  README.md  build.bat  hwid_modifier.cpp
index/: index.html
